src/App.module.css
.app {
  display: grid;
  gap: 6rem;
  grid-template: max-content 1fr / auto; 
  height: 100vh; /* fallback for old browsers */
  height: 100svh; /* Small view port height */
  padding: 3rem;
}

.app__header {
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  text-align: center;
  color: var(--primary-color);

  display: flex;
  flex-direction: column;
  gap: 6rem;
}

.app__header>span:first-child {
  font-family: "Protest Guerrilla", sans-serif;
  font-size: 4rem;
}

.app__main {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.app__main h1 {
  font-size: 3rem;
  font-weight: 600;
}

.app__fab {
  position: absolute;
  bottom: 3rem;
  right: 3rem;
  width: 6rem;
  height: 6rem;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 500;
  font-size: 5rem;
  background-color: var(--primary-color);
  color: var(--neutral-color);
}

